--- a/index.html
+++ b/index.html
@@ -17,18 +17,38 @@
 </head>
 <body class="bg-info">
     <header>
-        <nav class="navbar bg-info p-3">
-            <div class="container col-lg-12 col-md-10 col-sm-8 col-6 bg-info p-2 nav">
-                    <a class="linkNav animate__animated animate__fadeIn" href="#">Inicio</a>
-                    <a class="linkNav animate__animated animate__fadeIn" href="./pages/limpiezas.html">Limpiezas</a>
-                    <a class="linkNav animate__animated animate__fadeIn" href="./pages/mantenimientos.html">Mantenimientos</a>
-                    <a class="linkNav animate__animated animate__fadeIn" href="./pages/venta-de-productos.html">Venta de Productos</a>
-                    <a class="linkNav animate__animated animate__fadeIn" href="./pages/contacto.html">Contacto</a>
-                </div>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light animate__animated animate__fadeIn">
+            <div class="container-fluid bg-info ">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/Images/logodefinitivo.png" alt="" width="70" height="70" class="d-inline-block align-text-center">
+                    PoolCLean
+                </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav  justify-content-around w-100 bg-info">
+                  <li class="nav-item">
+                    <a class=" linkNav" aria-current="page" href="#">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="linkNav" href="./pages/limpiezas.html">Limpiezas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" linkNav" href="./pages/mantenimientos.html">Mantenimientos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class=" linkNav" href="./pages/venta-de-productos.html">Venta de Productos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="linkNav " href="./pages/contacto.html">Contacto</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
-        <div >
             <div class="container-fluid">
                 <div class="row">
                     <div class="fondoAgua">
@@ -40,11 +60,9 @@
                         </h2>
                     </div>
                 </div>
-            </div>
-        </div>
-        
+            </div>  
         <div class=fondoTexto>
-            <div class="container col-lg-12 col-md-12 col-sm-12 col-xl-12 col-xxl-12 ">
+            <div class="container ">
                 <div class="row">
                     <p class="texto animate__animated animate__fadeIn">
                         Somos una empresa familiar la cual año tras año se va expandiendo y creciendo cada vez mas llenandonos de conocimientos sobre el mantenimiento y cuidado de piscinas. Contamos con una trayectoria de mas de diez años brindando un servicio de calidad hacia nuestros clientes.<br>Nos enfocamos en la atención personalizada y trabajamos en base a sus necesidades. Tenemos distinto tipos de planes, productos y servicios para ofrecerles; por estas razones les podemos ofrecer garantia asegurada.
@@ -54,28 +72,28 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                    <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
+                        <img src="./assets/Images/limpiezascard2.jpg" class="card-img-top imgCard" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h3 class="card-title textoCard">Limpiezas</h3>
+                          <p class="card-text textoCard">Una manera rápida y eficaz de tener tu piscina limpia cuando y donde sea.</p>
+                          <a href="./pages/limpiezas.html" class="btn btn-primary">Ver más</a>
                         </div>
                       </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                      <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
+                        <img src="./assets/Images/manteniminetocard2.jpg" class="card-img-top imgCard" alt="imgMantenimiento">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h3 class="card-title textoCard">Mantenimientos</h3>
+                          <p class="card-text textoCard">La opción mas elegida por nuestros clientes, en la sección de mantenimiento verás nuestros planes para asegurar tener tu piscina en las condiciones ideales durante todo el año.</p>
+                          <a href="./pages/mantenimientos.html" class="btn btn-primary">Ver más</a>
                         </div>
                       </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
+                        <img src="./assets/Images/Productoscard2.jpg" class="card-img-top imgCard " alt="imgProductos">
+                        <div class="card-body tarjeta ">
+                          <h3 class="card-title textoCard">Venta de Productos</h3>
+                          <p class="card-text textoCard">¡Contamos con ventas de productos para el cuidado y mantenimiento de su piscina a domicilio!</p>
+                          <a href="./pages/venta-de-productos.html" class="btn btn-primary">Ver más</a>
                         </div>
                       </div>
 
@@ -95,5 +113,6 @@
 
     <footer>
     </footer>
+    <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
