--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       </head>
     
 </head>
-<body class="bg-info">
+<body class="bg-info  animate__animated animate__fadeIn">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light animate__animated animate__fadeIn">
-            <div class="container-fluid bg-info ">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <div class="container-fluid ">
                 <a class="navbar-brand" href="#">
                     <img src="./assets/Images/logodefinitivo.png" alt="" width="70" height="70" class="d-inline-block align-text-center">
                     PoolCLean
@@ -52,10 +52,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="fondoAgua">
-                        <h1 class="poolClean animate__animated animate__fadeIn">
+                        <h1 class="poolClean">
                         PoolClean
                         </h1>
-                        <h2 class="empresa animate__animated animate__fadeIn container-fluid">
+                        <h2 class="empresa  container-fluid">
                             Una empresa comprometida con la limpieza y el mantenimiento de piletas a lo largo de todo el año
                         </h2>
                     </div>
@@ -64,7 +64,7 @@
         <div class=fondoTexto>
             <div class="container ">
                 <div class="row">
-                    <p class="texto animate__animated animate__fadeIn">
+                    <p class="texto">
                         Somos una empresa familiar la cual año tras año se va expandiendo y creciendo cada vez mas llenandonos de conocimientos sobre el mantenimiento y cuidado de piscinas. Contamos con una trayectoria de mas de diez años brindando un servicio de calidad hacia nuestros clientes.<br>Nos enfocamos en la atención personalizada y trabajamos en base a sus necesidades. Tenemos distinto tipos de planes, productos y servicios para ofrecerles; por estas razones les podemos ofrecer garantia asegurada.
                     </p>
                 </div>
@@ -77,7 +77,7 @@
                         <div class="card-body">
                           <h3 class="card-title textoCard">Limpiezas</h3>
                           <p class="card-text textoCard">Una manera rápida y eficaz de tener tu piscina limpia cuando y donde sea.</p>
-                          <a href="./pages/limpiezas.html" class="btn btn-primary">Ver más</a>
+                          <a href="./pages/limpiezas.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
                       <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
@@ -85,15 +85,15 @@
                         <div class="card-body">
                           <h3 class="card-title textoCard">Mantenimientos</h3>
                           <p class="card-text textoCard">La opción mas elegida por nuestros clientes, en la sección de mantenimiento verás nuestros planes para asegurar tener tu piscina en las condiciones ideales durante todo el año.</p>
-                          <a href="./pages/mantenimientos.html" class="btn btn-primary">Ver más</a>
+                          <a href="./pages/mantenimientos.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
-                      <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
+                      <div class="card tarjeta" style="width: 100; margin-top: 2rem;">
                         <img src="./assets/Images/Productoscard2.jpg" class="card-img-top imgCard " alt="imgProductos">
                         <div class="card-body tarjeta ">
                           <h3 class="card-title textoCard">Venta de Productos</h3>
                           <p class="card-text textoCard">¡Contamos con ventas de productos para el cuidado y mantenimiento de su piscina a domicilio!</p>
-                          <a href="./pages/venta-de-productos.html" class="btn btn-primary">Ver más</a>
+                          <a href="./pages/venta-de-productos.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
 
@@ -111,7 +111,18 @@
         </div>
     </main>
 
-    <footer>
+    <footer class="fondoFooter">
+        <div class="container ">
+          <div class="row">
+            <img class="imgFooter " src="./assets/Images/bxl-whatsapp.svg" alt="wpp">
+            <p class="textoFooter">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia optio voluptatibus laudantium itaque eligendi consectetur totam, repellendus harum possimus soluta. Quae odit laudantium debitis voluptates dolorem? Ipsum illo laboriosam adipisci.
+            </p>
+            <p class="textoFooter">
+              Todos los derechos reservados © | Desarrollado por Lucas
+            </p>
+          </div>
+        </div>
     </footer>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
