--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,13 +27,13 @@
     <main>
     </main>
 
-    <footer class="footer">
+    <footer >
         <div>
-        <img class="logoWpp" src="./assets/Images/bxl-whatsapp.svg" alt="">
-        <p class="textoFooter">
+        <img src="./assets/Images/bxl-whatsapp.svg" alt="wpp">
+        <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia optio voluptatibus laudantium itaque eligendi consectetur totam, repellendus harum possimus soluta. Quae odit laudantium debitis voluptates dolorem? Ipsum illo laboriosam adipisci.
         </p>
-        <p class="derechos">
+        <p>
             Todos los derechos reservados © | Desarrollado por Lucas
         </p>
         </div>
