--- a/index.html
+++ b/index.html
@@ -72,27 +72,24 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
-                        <img src="./assets/Images/limpiezascard2.jpg" class="card-img-top imgCard" alt="...">
+                    <div class="card tarjetaLimpiezas" style="width: 100; margin-top: 5rem;">
                         <div class="card-body">
-                          <h3 class="card-title textoCard">Limpiezas</h3>
-                          <p class="card-text textoCard">Una manera rápida y eficaz de tener tu piscina limpia cuando y donde sea.</p>
+                          <h3 class="card-title tituloCard">Limpiezas</h3>
+                          <p class="card-text parrafoCard">Una manera rápida y eficaz de tener tu piscina limpia cuando y donde sea.</p>
                           <a href="./pages/limpiezas.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
-                      <div class="card tarjeta" style="width: 100; margin-top: 5rem;">
-                        <img src="./assets/Images/manteniminetocard2.jpg" class="card-img-top imgCard" alt="imgMantenimiento">
+                      <div class="card tarjetaMantenimientos" style="width: 100; margin-top: 5rem;">
                         <div class="card-body">
-                          <h3 class="card-title textoCard">Mantenimientos</h3>
-                          <p class="card-text textoCard">La opción mas elegida por nuestros clientes, en la sección de mantenimiento verás nuestros planes para asegurar tener tu piscina en las condiciones ideales durante todo el año.</p>
+                          <h3 class="card-title tituloCard">Mantenimientos</h3>
+                          <p class="card-text parrafoCard">La opción mas elegida por nuestros clientes, en la sección de mantenimiento verás nuestros planes para asegurar tener tu piscina en las condiciones ideales durante todo el año.</p>
                           <a href="./pages/mantenimientos.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
-                      <div class="card tarjeta" style="width: 100; margin-top: 2rem;">
-                        <img src="./assets/Images/Productoscard2.jpg" class="card-img-top imgCard " alt="imgProductos">
-                        <div class="card-body tarjeta ">
-                          <h3 class="card-title textoCard">Venta de Productos</h3>
-                          <p class="card-text textoCard">¡Contamos con ventas de productos para el cuidado y mantenimiento de su piscina a domicilio!</p>
+                      <div class=" card tarjetaProductos" style="width: 100; margin-top: 5rem;margin-bottom: 5rem;">
+                        <div class="card-body">
+                          <h3 class="card-title tituloCard">Venta de Productos</h3>
+                          <p class="card-text parrafoCard">¡Contamos con ventas de productos para el cuidado y mantenimiento de su piscina a domicilio!</p>
                           <a href="./pages/venta-de-productos.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
@@ -112,18 +109,17 @@
     </main>
 
     <footer class="fondoFooter">
-        <div class="container ">
-          <div class="row">
-            <img class="imgFooter " src="./assets/Images/bxl-whatsapp.svg" alt="wpp">
-            <p class="textoFooter">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia optio voluptatibus laudantium itaque eligendi consectetur totam, repellendus harum possimus soluta. Quae odit laudantium debitis voluptates dolorem? Ipsum illo laboriosam adipisci.
-            </p>
-            <p class="textoFooter">
-              Todos los derechos reservados © | Desarrollado por Lucas
-            </p>
-          </div>
+       <div class="container ">
+         <div class="row">
+            <a class="p-1 linkFooter" href="">Inicio</a> 
+            <a class="p-1 linkFooter" href="">Limpiezas</a>
+            <a class="p-1 linkFooter" href="">Mantenimientos</a>
+            <a class="p-1 linkFooter" href="">Venta de productos</a>
+            <a class="p-1 linkFooter" href="">Contacto</a> 
+            <p class="textoFooter"> Todos los derechos reservados © | Desarrollado por Lucas </p>
+            </div>
         </div>
-    </footer>
+      </footer>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
 </html>
