--- a/index.html
+++ b/index.html
@@ -98,27 +98,23 @@
             </div>
 
         </div>
-        
-
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                </div>
-            </div>
-        </div>
     </main>
 
     <footer class="fondoFooter">
-       <div class="container ">
-         <div class="row">
+       <div class="container estiloLink ">
+         <div class=" row">
             <a class="p-1 linkFooter" href="">Inicio</a> 
             <a class="p-1 linkFooter" href="">Limpiezas</a>
             <a class="p-1 linkFooter" href="">Mantenimientos</a>
             <a class="p-1 linkFooter" href="">Venta de productos</a>
-            <a class="p-1 linkFooter" href="">Contacto</a> 
-            <p class="textoFooter"> Todos los derechos reservados © | Desarrollado por Lucas </p>
+            <a class="p-1 linkFooter" href="">Contacto</a>  
+          </div>
+          <div class="container">
+            <div class="row">
+              <p class="textoFooter"> Todos los derechos reservados © | Desarrollado por Lucas </p>
             </div>
-        </div>
+          </div>
+        
       </footer>
     <script src="./js/bootstrap.bundle.js"></script>
 </body>
