--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
     <footer class="fondoFooter">
        <div class="container estiloLink ">
          <div class=" row">
-            <a class="p-1 linkFooter" href="">Inicio</a> 
-            <a class="p-1 linkFooter" href="">Limpiezas</a>
-            <a class="p-1 linkFooter" href="">Mantenimientos</a>
-            <a class="p-1 linkFooter" href="">Venta de productos</a>
-            <a class="p-1 linkFooter" href="">Contacto</a>  
+            <a class="p-1 linkFooter" href="#">Inicio</a> 
+            <a class="p-1 linkFooter" href="./pages/limpiezas.html">Limpiezas</a>
+            <a class="p-1 linkFooter" href="./pages/mantenimientos.html">Mantenimientos</a>
+            <a class="p-1 linkFooter" href="./pages/venta-de-productos.html">Venta de productos</a>
+            <a class="p-1 linkFooter" href="./pages/contacto.html">Contacto</a>  
           </div>
           <div class="container">
             <div class="row">
