Index Mantenimientos Listos

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>PoolClean</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <head>
         <link
           rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+      </head>
+    
 </head>
 <body class="bg-info  animate__animated animate__fadeIn">
     <header>
