Contacto Index Mantenimientos

--- a/pages/mantenimientos.html
+++ b/pages/mantenimientos.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mantenimientos</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="bg-info  animate__animated animate__fadeIn">
@@ -75,7 +76,7 @@
                     <p class="card-text parrafoCard ">Este plan es el mas elegido por la gente ya que incluye una limpieza semanal con un dia y una hora acordada y fija.<br>
                     Ademas de la limpieza incluye pastillas de cloro triple accion y cloro liquido<br>
                     Precio: $4000</p>
-                    <a href="../pages/contacto.html" class="btn btn-info">Saber más</a>
+                    <a href="../pages/contacto.html" class="btn btn-info botonPlanes">Saber más</a>
             </div>
         </div>
 
@@ -85,7 +86,7 @@
               <p class="card-text parrafoCard">En esta opcion contamos con dos limpiezas semanales con dias y horarios fijos, se recomienda elegir esta opción en el caso que tenga muchos arboles rodeando la pileta. <br>
                 Ademas de las limpiezas semanales incluye pastillas de cloro triple accion, cloro liquido y alguicida<br>
                 Precio:$6000</p>
-              <a href="../pages/contacto.html" class="btn btn-info">Saber más</a>
+              <a href="../pages/contacto.html" class="btn btn-info botonPlanes">Saber más</a>
             </div>
         </div>
 
@@ -95,7 +96,7 @@
               <p class="card-text parrafoCard">Si quiere tener un descuento y asegurarse de que su pileta estara siempre en perfectas condiciones puede pagar un plan trimestral el cual incluye una limpieza semanal.<br>
                 Ademas de la limpieza semanal se incluye pastillas de cloro triple accion y cloro liquido<br>
                 Precio:$9500</p>
-              <a href="../pages/contacto.html" class="btn btn-info">Saber más</a>
+              <a href="../pages/contacto.html" class="btn btn-info botonPlanes">Saber más</a>
             </div>
         </div>
 
