limpieza mantenimiento contacto inicio

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoolClean</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <head>
+    <link rel="stylesheet" href="./css/bootstrap.rtl.css">
+    <link rel="stylesheet" href="./css/styles.css">
         <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-        />
-      </head>
+          rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+</head>
     
 </head>
 <body class="bg-info  animate__animated animate__fadeIn">
@@ -20,7 +17,7 @@
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid ">
                 <a class="navbar-brand" href="#">
-                    <img src="./assets/Images/logodefinitivo.png" alt="" width="70" height="70" class="d-inline-block align-text-center">
+                    <img src="./assets/Images/logodefinitivo.png" alt="logo" width="70" height="70" class="d-inline-block align-text-center">
                     PoolCLean
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +58,7 @@
                     </div>
                 </div>
             </div>  
-        <div class=fondoTexto>
+        <div>
             <div class="container ">
                 <div class="row">
                     <p class="texto">
@@ -79,14 +76,14 @@
                           <a href="./pages/limpiezas.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
-                      <div class="card tarjetaMantenimientos" style="width: 100; margin-top: 5rem;">
+                      <div class="card tarjetaMantenimientos" style="width: 100; margin-top: 5rem; margin-bottom: 5rem; ">
                         <div class="card-body">
                           <h3 class="card-title tituloCard">Mantenimientos</h3>
                           <p class="card-text parrafoCard">La opción mas elegida por nuestros clientes, en la sección de mantenimiento verás nuestros planes para asegurar tener tu piscina en las condiciones ideales durante todo el año.</p>
                           <a href="./pages/mantenimientos.html" class="btn btn-info boton">Ver más</a>
                         </div>
                       </div>
-                      <div class=" card tarjetaProductos" style="width: 100; margin-top: 5rem;margin-bottom: 5rem;">
+                      <div class=" card tarjetaProductos" style="width: 100;margin-bottom: 5rem;">
                         <div class="card-body">
                           <h3 class="card-title tituloCard">Venta de Productos</h3>
                           <p class="card-text parrafoCard">¡Contamos con ventas de productos para el cuidado y mantenimiento de su piscina a domicilio!</p>
