--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,6 +56,16 @@
                 </div>
             </div>
         </div>
+
+        <div>
+          <div class="container ">
+              <div class="row">
+                  <p class="textoMantenimiento">
+                      Dejanos la mayor cantidad de datos posibles así podremos tener una atención deseada.
+                  </p>
+            </div>
+        </div>
+
         <div class="container formulario">
             <form class="row g-3">
             <div class="col-md-6">
