--- a/pages/mantenimientos.html
+++ b/pages/mantenimientos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mantenimientos</title>
     
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid ">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../assets/Images/logodefinitivo.png" alt="" width="70" height="70" class="d-inline-block align-text-center">
+                    <img src="../assets/Images/logodefinitivo.png" alt="logo" width="70" height="70" class="d-inline-block align-text-center">
                     PoolCLean
                 </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
