--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,7 @@
         <div>
           <div class="container ">
               <div class="row">
-                  <p class="textoMantenimiento">
+                  <p class="textoContacto">
                       Dejanos la mayor cantidad de datos posibles así podremos tener una atención deseada.
                   </p>
             </div>
