--- a/pages/limpiezas.html
+++ b/pages/limpiezas.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Limpiezas</title>
+    <link rel="shortcut icon" href="../assets/Images/logodefinitivo.png">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -77,8 +78,14 @@
         <div class=" estiloLink  container">
             <div class="mapa">
                 <div class="mapa">
+                    <h4 style="text-align:center ; color: white; font-size: large; font-weight: lighter; padding-top: 1rem;">
+                        Nuestras oficinas:
+                      </h4>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3414.1417767415164!2d-64.30401282951506!3d-31.16134072803164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943281960069caab%3A0x163e97c38e3a872b!2zMzHCsDA5JzQxLjciUyA2NMKwMTgnMjcuMCJX!5e0!3m2!1ses-419!2sar!4v1670197746737!5m2!1ses-419!2sar" width="80%" height="200" style="border:0; border-radius: 1.3rem; margin-top: 2rem; margin-bottom: 2rem; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
+              </div>
+              <div style="color: white ; font-weight:lighter ; text-align: center; margin-bottom: 1rem; font-size: large;">
+                Número de contacto : 351 8035273
               </div>
             <div class="box">
                 <a class="p-1 linkFooter" href="../index.html">Inicio</a> 
