--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Lucas Bazzini">
+  <meta name="audience" content="all">
+  <meta name="language" content="spanish">
+  <meta name="description" content="Mientras más datos nos dejes mayor será la atención y tendrá lo que desea en un tiempo óptimo.Presupuesto de Limpiezas, Mantenimientos y Productos para piletas">
+  <meta name="keywords" content="Contacto, atención, presupuesto">
+  <meta name="itemprop" content="351-8035273">
+
     <title>Contacto</title>
-    <link rel="shortcut icon" href="../assets/Images/logodefinitivo.png">
+    <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
@@ -71,19 +78,19 @@
             <form class="row g-3">
             <div class="col-md-6">
               <label  class="form-label letraForm lineaFormulario">Nombre</label>
-              <input type="text" class="form-control" >
+              <input type="text" class="form-control" required>
             </div>
             <div class="col-md-6">
               <label  class="form-label letraForm lineaFormulario">Apellido</label>
-              <input type="text" class="form-control" >
+              <input type="text" class="form-control" required >
             </div>
             <div class="col-12">
               <label  class="form-label letraForm lineaFormulario">Mail de contacto</label>
-              <input type="email" class="form-control"  placeholder="@gmail.com">
+              <input type="email" class="form-control"  placeholder="@gmail.com" required>
             </div>
             <div class="col-12">
               <label  class="form-label letraForm lineaFormulario">Número de teléfono</label>
-              <input type="number" class="form-control"  placeholder="+54 ...">
+              <input type="number" class="form-control"  placeholder="+54 ..." required>
             </div>
             <div class="col-md-6">
               <label class="form-label letraForm lineaFormulario">Ciudad</label>
@@ -102,7 +109,7 @@
               <input type="text" class="form-control mb-5" >
             </div>
             <div class="col-12 ">
-              <button type="submit" class="btn btn-info w-100">¡Listo!</button>
+              <input type="submit" value="¡Listo!" class="btn btn-info w-100"></input>
             </div>
           </form></div>
        
