--- a/pages/limpiezas.html
+++ b/pages/limpiezas.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Lucas Bazzini">
+    <meta name="audience" content="all">
+    <meta name="language" content="spanish">
+    <meta name="description" content="¡Limpiezas de piscinas cuando y donde quiera! Contactanos y coordinamos un dia y horario para dejar su pileta en un estado perfecto y tiempo inmejorable ">
+    <meta name="keywords" content="Limpiezas, Cloro, Verano, Mantenimiento">
+    <meta name="itemprop" content="351-8035273">
     <title>Limpiezas</title>
-    <link rel="shortcut icon" href="../assets/Images/logodefinitivo.png">
+    <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
