--- a/pages/mantenimientos.html
+++ b/pages/mantenimientos.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Lucas Bazzini">
+    <meta name="audience" content="all">
+    <meta name="language" content="spanish">
+    <meta name="description" content="Mantenimiento de piletas mensuales y trimestrales para tener su pileta en el mejor estado a lo largo de todo el año y en un horario optimo en inmejorable">
+    <meta name="keywords" content="Mantenimiento, Piletas, Plan Mensual, Cloro">
+    <meta name="itemprop" content="351-8035273">
     <title>Mantenimientos</title>
-    <link rel="shortcut icon" href="../assets/Images/logodefinitivo.png">
+    <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
