--- a/pages/venta-de-productos.html
+++ b/pages/venta-de-productos.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Lucas Bazzini">
+  <meta name="audience" content="all">
+  <meta name="language" content="spanish">
+  <meta name="description" content="¡Los mejores productos quimicos para piscinas en un solo lugar y con reparto a domicilio sin encargo de donde quieras que seas! Descuento en compras al por mayor">
+  <meta name="keywords" content="Cloro, Alguicida, Productos para piletas, Pileta">
+  <meta name="itemprop" content="351-8035273">
     <title>Venta de Productos</title>
-    <link rel="shortcut icon" href="../assets/Images/logodefinitivo.png">
+    <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
