--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="itemprop" content="351-8035273">
   
     <title>PoolClean</title>
-    <link rel="shortcut icon" href="./assets/Images/logodefinitivo.png">
+    <link rel="shortcut icon" href="./assets/Images/favicon.ico">
     <link rel="stylesheet" href="./css/bootstrap.rtl.css">
     <link rel="stylesheet" href="./css/styles.css">
         <link
