--- a/pages/error404.html
+++ b/pages/error404.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error 404 Not_Founds</title>
+    <link rel="shortcut icon" href="../assets/Images/favicon.ico">
+    <link rel="stylesheet" href="../css/bootstrap.rtl.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <title>Error 404 Not_Found</title>
 </head>
 <body>
+    <main>
+    </main>
     
 </body>
 </html>
