--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
 <body class="bg-info  animate__animated animate__fadeIn">
     <header>
@@ -109,10 +110,9 @@
               <input type="text" class="form-control mb-5" >
             </div>
             <div class="col-12 ">
-              <input type="submit" value="¡Listo!" class="btn btn-info w-100"></input>
+              <a href="../pages/error404.html"><input type="button" value="¡Listo!" class="btn btn-info w-100"></input></a>
             </div>
           </form></div>
-       
     </main>
 
     <footer class="fondoFooter">
