--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <link rel="shortcut icon" href="./assets/Images/favicon.ico">
     <link rel="stylesheet" href="./css/bootstrap.rtl.css">
     <link rel="stylesheet" href="./css/styles.css">
-        <link
-          rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 </head>
     
 </head>
