--- a/pages/error404.html
+++ b/pages/error404.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/Images/favicon.ico">
-    <link rel="stylesheet" href="../css/bootstrap.rtl.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>Error 404 Not_Found</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <title>Error 404</title>
 </head>
 <body>
-    <main>
+    <main class="main404">
+        <div class="contenedor">
+            <img class="img404" src="../assets/Images/error404sincabeza.png" alt="error404sincabeza">
+            <h1 class="titulo404">
+                Al parecer la página no se encuentra disponible.
+            </h1>
+            <div class="boton d-grid gap-2">
+                <button class="btn btn-primary" type="button">
+                    <a style="text-decoration: none; color: white;" href="../index.html">Volver a la página principal</a> 
+                </button>
+              </div>
+        </div>
+
     </main>
-    
 </body>
 </html>
