--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -109,8 +109,8 @@
               <label  class="form-label letraForm lineaFormulario">Pequeña descripción</label>
               <input type="text" class="form-control mb-5" >
             </div>
-            <div class="col-12 ">
-              <a href="../pages/error404.html"><input type="button" value="¡Listo!" class="btn btn-info w-100"></input></a>
+            <div class="col-12">
+              <a href="../pages/error404.html"><input type="submit" value="¡Listo!" class="btn btn-info w-100"></input></a>
             </div>
           </form></div>
     </main>
