Todo Listo menos boton contacto

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="fondoAgua">
-                        <h1 class="poolClean">
+                        <h1 class="poolClean animate__animated animate__backInDown">
                         PoolClean
                         </h1>
                         <h2 class="empresa  container-fluid">
