--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -56,7 +56,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="fondoAgua">
-                    <h1 class="mantenimientos">
+                    <h1 class="mantenimientos animate__animated animate__backInDown">
                         Contacto
                     </h1>
                     <h2 class="container ">
@@ -109,10 +109,11 @@
               <label  class="form-label letraForm lineaFormulario">Pequeña descripción</label>
               <input type="text" class="form-control mb-5" >
             </div>
-            <div class="col-12">
-              <a href="../pages/error404.html"><input type="submit" value="¡Listo!" class="btn btn-info w-100"></input></a>
+            <div class="d-grid gap-2 col-6 mx-auto">
+              <a href="../pages/error404.html"><button type="submit" value="¡Listo!" class="btn btn-info w-100">¡Listo!</button></a>
             </div>
-          </form></div>
+          </form>
+        </div>
     </main>
 
     <footer class="fondoFooter">
