--- a/pages/error404.html
+++ b/pages/error404.html
@@ -15,7 +15,7 @@
     <main class="main404">
         <div class="contenedor">
             <img class="img404" src="../assets/Images/error404sincabeza.png" alt="error404sincabeza">
-            <h1 class="titulo404">
+            <h1 class="titulo404 animate__animated animate__backInDown">
                 Al parecer la página no se encuentra disponible.
             </h1>
             <div class="boton d-grid gap-2">
