--- a/pages/limpiezas.html
+++ b/pages/limpiezas.html
@@ -57,7 +57,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="fondoAgua">
-                    <h1 class="mantenimientos">
+                    <h1 class="mantenimientos animate__animated animate__backInDown ">
                         Limpiezas
                     </h1>
                     <h2 class="container empresaIdeal">
