--- a/pages/venta-de-productos.html
+++ b/pages/venta-de-productos.html
@@ -56,7 +56,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="fondoAgua">
-                    <h1 class="ventaDeproductos">
+                    <h1 class="ventaDeproductos animate__animated animate__backInDown">
                         Venta de productos
                     </h1>
                     <h2 class="container empresaIdeal">
