--- a/pages/mantenimientos.html
+++ b/pages/mantenimientos.html
@@ -56,7 +56,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="fondoAgua">
-                    <h1 class="mantenimientos">
+                    <h1 class="mantenimientos animate__animated animate__backInDown">
                         Mantenimientos
                     </h1>
                     <h2 class="container empresaIdeal">
