--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="container formulario">
-            <form class="row g-3">
+            <form action="../pages/error404.html" class="row g-3">
             <div class="col-md-6">
               <label  class="form-label letraForm lineaFormulario">Nombre</label>
               <input type="text" class="form-control" required>
@@ -110,7 +110,7 @@
               <input type="text" class="form-control mb-5" >
             </div>
             <div class="d-grid gap-2 col-6 mx-auto">
-              <a href="../pages/error404.html"><button type="submit" value="¡Listo!" class="btn btn-info w-100">¡Listo!</button></a>
+              <button type="submit" value="¡Listo!" class="btn btn-info w-100">¡Listo!</button>
             </div>
           </form>
         </div>
