--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <meta name="keywords" content="piletas en cordoba, Cloro, Pileta, Piscina,cloro granulado, cloro bidon 10 litros, Pastillas">
     <meta name="robots" content="index, all, follow">
     <meta name="itemprop" content="351-8035273">
+    <title>PoolClean - Córdoba</title>
   
-    <title>PoolClean</title>
+    >
     <link rel="shortcut icon" href="./assets/Images/favicon.ico">
     <link rel="stylesheet" href="./css/bootstrap.rtl.css">
     <link rel="stylesheet" href="./css/styles.css">
