--- a/pages/limpiezas.html
+++ b/pages/limpiezas.html
@@ -11,7 +11,7 @@
     <meta name="description" content="¡Limpiezas de piscinas cuando y donde quiera! Contactanos y coordinamos un dia y horario para dejar su pileta en un estado perfecto y tiempo inmejorable ">
     <meta name="keywords" content="Limpiezas, Cloro, Verano, Mantenimiento">
     <meta name="itemprop" content="351-8035273">
-    <title>Limpiezas</title>
+    <title>PoolClean - Limpiezas</title>
     <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
