--- a/pages/mantenimientos.html
+++ b/pages/mantenimientos.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Mantenimiento de piletas mensuales y trimestrales para tener su pileta en el mejor estado a lo largo de todo el año y en un horario optimo en inmejorable">
     <meta name="keywords" content="Mantenimiento, Piletas, Plan Mensual, Cloro">
     <meta name="itemprop" content="351-8035273">
-    <title>Mantenimientos</title>
+    <title>PoolClean - Mantenimientos</title>
     <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
