--- a/pages/venta-de-productos.html
+++ b/pages/venta-de-productos.html
@@ -10,7 +10,7 @@
   <meta name="description" content="¡Los mejores productos quimicos para piscinas en un solo lugar y con reparto a domicilio sin encargo de donde quieras que seas! Descuento en compras al por mayor">
   <meta name="keywords" content="Cloro, Alguicida, Productos para piletas, Pileta">
   <meta name="itemprop" content="351-8035273">
-    <title>Venta de Productos</title>
+    <title>PoolClean - Venta de Productos</title>
     <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="../css/bootstrap.rtl.css">
     <link rel="stylesheet" href="../css/styles.css">
