--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="Contacto, atención, presupuesto">
   <meta name="itemprop" content="351-8035273">
 
-    <title>Contacto</title>
+    <title>PoolClean - Contacto</title>
     <link rel="shortcut icon" href="../assets/Images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
