--- a/pages/venta-de-productos.html
+++ b/pages/venta-de-productos.html
@@ -111,6 +111,30 @@
               <a href="../pages/contacto.html" class="btn btn-info botonPlanes">Saber más</a>
             </div>
         </div>
+        <div class="container">
+          <div class="row">
+            <div class="imgProductos">
+              <h3 class="productosTexto">
+                Contamos con pastillas triple acción, las cuales contienen Cloro Alguicida y Clarificador, formando un combo perfecto para que su pileta se encuentre siempre protegida.
+              </h3>
+              <img class="productos" src="../assets/Images/cloroLiquido-removebg-preview.png" alt="Cloro Liquido">
+            </div>
+            <div class="imgProductos">
+              <h3 class="productosTexto">
+                Nuestro cloro liquido ultra concentrado es el mejor para matar todo tipo de bacteria maligna para usted y su familia. <br>
+                Un solo litro de este cloro rinde para 10.000 litros de agua.
+              </h3>
+              <img class="productos" src="../assets/Images/pastillas-removebg-preview.png" alt="Pastillas Triple Acción">
+            </div>
+            <div class="imgProductos">
+              <h3 class="productosTexto">
+                Este alguicida de rápida acción es de los mejores del mercados y compite a un altisimo nivel por la velocidad de combate a cualquier tipo de algas. <br>
+                Con solo aplicar una sola vez su pileta quedará libre de algas.
+              </h3>
+              <img class="productos" src="../assets/Images/alguicida.png" alt="Alguicida">
+            </div>
+          </div>
+        </div>
 
     </div>
 </div>
